# snapshot 0.7.12a

07 Feb 2004 mreindl
* fix braino that got introduced with the bcopy -> memmove switch in parse.c

# snapshot 0.7.12

05 Feb 2004 mipsator
 * converted pmk_set_parameter() to a wrapper.
 * added sub-functions for pmk_set_paremeter().
 * added system specific overriding support of compiler flags.

05 Feb 2004 mreindl
 * replaced getopts with getopt in pmkcfg.sh
 * added pkgsrc stuff for stable and snapshot
 * big STATUS updates, pmk tested on nearly every Unix out there with C-only
	support

04 Feb 2004 mipsator
 * improved process_string() to be recursive.
 * imported experimental shared lib support.

27 Jan 2004 mipsator
 * fixed wrong check of init_var().

26 Jan 2004 mipsator
 * fixed a bug in pmkpc that occurs when using non implemented option
	in pmkpc (noticed by xixi ;).

25 Jan 2004 mipsator
 * added support for --atleast-pkgconfig-version in pmkpc.
 * added man page for pmkpc.
 * added missing checks for hash_update* almost everywhere.
 * implemented --list-all in pmkpc.

25 Jan 2004 sourceforge
 * repaired developer cvs server

22 Jan 2004 sourceforge
 * broken developer cvs server

21 Jan 2004 xsa
 * added the --usage option in pmkpc.
 * added the --help option in pmkpc.

21 Jan 2004 mipsator
 * use str_to_ulong() in functool and pmkinstall.
 * added compare_version() in pkgconfig for version string comparison.
 * updated func to use compare_version() instead of check_version().
 * removed check_version() from functool.
 * added support for option argument in pmkpc.
 * added support for --atleast-version, --exact-version and
	--max-version in pmkpc.

20 Jan 2004 mipsator
 * moved size type from int to size_t for most functions in common.
 * added str_to_ulong() in common for string to unsigned long conversions.

19 Jan 2004 xsa
 * imported sample test for C binary.

17 Jan 2004 mipsator
 * fixed specific deinstall stuff in Makefile.
 * fixed setting of shared lib cflags.
 * fixed init of ac_file and lang in global data.